--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for Perl extension Device::L3GD20.
 0.001  Sat Sep  7 13:18:47 2013
 	- original version;  
 
+0.002  
+  - Pod fix  
