--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Device::L3GD20 - I2C interface to L3GD20 3 axis GyroScope using Device::SMBus
 
 =head1 VERSION
 
-version 0.003
+version 0.004
 
 =head1 ATTRIBUTES
 
@@ -20,7 +20,7 @@ This must be provided during object creation.
     $self->Gyroscope->enable();
     $self->Gyroscope->getReading();
 
-This is a object of L<Device::L3GD20::Gyroscope>
+This is a object of L<Device::Gyroscope::L3GD20>
 
 =for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
