--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Device::L3GD20 - I2C interface to L3GD20 3 axis GyroScope using Device::SMBus
 
 =head1 VERSION
 
-version 0.007
+version 0.008
 
 =head1 ATTRIBUTES
 
@@ -29,7 +29,7 @@ This is a object of L<Device::Gyroscope::L3GD20>
 =head2 Bugs / Feature Requests
 
 Please report any bugs or feature requests through github at 
-L<https://github.com/shantanubhadoria/device-l3gd20/issues>.
+L<https://github.com/shantanubhadoria/perl-device-l3gd20/issues>.
 You will be notified automatically of any progress on your issue.
 
 =head2 Source Code
@@ -37,15 +37,17 @@ You will be notified automatically of any progress on your issue.
 This is open source software.  The code repository is available for
 public review and contribution under the terms of the license.
 
-L<https://github.com/shantanubhadoria/device-l3gd20>
+L<https://github.com/shantanubhadoria/perl-device-l3gd20>
 
-  git clone git://github.com/shantanubhadoria/device-l3gd20.git
+  git clone git://github.com/shantanubhadoria/perl-device-l3gd20.git
 
 =head1 AUTHOR
 
 Shantanu Bhadoria <shantanu at cpan dott org>
 
 =head1 CONTRIBUTORS
+
+=for stopwords Shantanu Bhadoria
 
 =over 4
 
@@ -61,8 +63,9 @@ Shantanu Bhadoria <shantanu@cpan.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2013 by Shantanu Bhadoria.
+This software is copyright (c) 2015 by Shantanu Bhadoria.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
+=cut
